# track-working-hours

./: .env  Cargo.toml  README.md  exported.csv  rocket.toml
data/: Cargo.toml
data/migrations/2020-07-19-021026_create_projects/: down.sql  up.sql
data/migrations/2020-07-19-034008_create_users/: up.sql
data/migrations/2020-07-19-034015_create_trackings/: down.sql  up.sql
data/migrations/2020-07-20-080149_create_assigns/: down.sql  up.sql
data/src/: lib.rs  models.rs  schema.rs
dingtalk/: Cargo.toml
dingtalk-fe/: app.json
dingtalk-fe/page/index/: index.axml  index.js
dingtalk-fe/page/record/: record.axml  record.js
dingtalk/src/: lib.rs
export-csv/: Cargo.toml
export-csv/src/: lib.rs
server/: Cargo.toml  rocket.toml
server/src/: dingtalk_pages.rs  lib.rs  main.rs  pages.rs
server/src/requests/: login_form.rs  track_form.rs
templates/: admin.html.tera  base.html.tera  forget.html.tera  index.html.tera  login.html.tera  track.html.tera
