[package]
name = "dingtalk"
version = "0.1.0"
authors = ["Junxue Zhang <snow.zjx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.10", features = ["json"] }
# tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.114"
json = "0.12.4"
dotenv = "0.15.0"