[package]
name = "server"
version = "0.1.0"
authors = ["Zhang Junxue <snow.zjx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"]}
rocket_session = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
data = { path = "../data" } 
export-csv = { path = "../export-csv" }